force-app/main/default/objects/Opportunity/fields/Channel_Partner_Current_Target__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Current_Target__c</fullName>
    <formula>IF(Account.Current_Quota_Target__c = 0, Owner.Contact.Account.Current_Quota_Target__c , Account.Current_Quota_Target__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Partner Current Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>