force-app/main/default/objects/Opportunity/fields/Channel_Partner_Stage__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Stage__c</fullName>
    <formula>IF( IsWon , &quot;Won&quot;,
  IF( OR( ISPICKVAL(ForecastCategoryName, &quot;Pipeline&quot;), ISPICKVAL(ForecastCategoryName, &quot;Best Case&quot;), ISPICKVAL(ForecastCategoryName, &quot;Commit&quot;)), &quot;Pipeline&quot;,
    IF(IsClosed, &quot;Lost&quot;, &quot;&quot;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Partner Stage</label>
    <type>Text</type>
</CustomField>