force-app/main/default/objects/Opportunity/fields/Channel_Region__c.field-meta.xml
<CustomField>
    <fullName>Channel_Region__c</fullName>
    <formula>IF(ISBLANK(End_Customer__c), 
  TEXT(Account.Channel_Region__c),
  TEXT(End_Customer__r.Channel_Region__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Channel Region from the related End Customer, unless End Customer is blank, then Channel Region from the related Account.</inlineHelpText>
    <label>Channel Region</label>
    <type>Text</type>
</CustomField>