force-app/main/default/objects/Opportunity/fields/Channel_Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>Channel_Sub_Region__c</fullName>
    <formula>IF(ISBLANK(End_Customer__c), 
  TEXT(Account.Channel_Sub_Region__c),
  TEXT(End_Customer__r.Channel_Sub_Region__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Channel Sub-Region from the related End Customer, unless End Customer is blank, then Channel Sub-Region from the related Account.</inlineHelpText>
    <label>Channel Sub-Region</label>
    <type>Text</type>
</CustomField>