force-app/main/default/objects/Opportunity/fields/Close_Date_Month__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Month__c</fullName>
    <formula>MONTH( CloseDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>