force-app/main/default/objects/Opportunity/fields/Close_Date_Updates__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Updates__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is updated by a workflow &apos;Increment Close Date when updated&apos;. Whenever close date value on the opportunity is updated, this field is incremented by 1</description>
    <label># Close Date Updates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>