force-app/main/default/objects/Opportunity/fields/Close_Probability__c.field-meta.xml
<CustomField>
    <fullName>Close_Probability__c</fullName>
    <label>Close Probability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>