force-app/main/default/objects/Opportunity/fields/Close_strategy__c.field-meta.xml
<CustomField>
    <fullName>Close_strategy__c</fullName>
    <label>Close Strategy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>