force-app/main/default/objects/Opportunity/fields/Competition_Notes__c.field-meta.xml
<CustomField>
    <fullName>Competition_Notes__c</fullName>
    <description>PDX Field</description>
    <label>Competition Notes</label>
    <type>TextArea</type>
</CustomField>