force-app/main/default/objects/Opportunity/fields/Competition_Type__c.field-meta.xml
<CustomField>
    <fullName>Competition_Type__c</fullName>
    <label>Competition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buying From Someone Else</fullName>
            </value>
            <value>
                <fullName>Using Budget for Something Else</fullName>
            </value>
            <value>
                <fullName>Using Internal Resource</fullName>
            </value>
            <value>
                <fullName>Doing Nothing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>