force-app/main/default/objects/Opportunity/fields/Competitor_Name_CAT__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name_CAT__c</fullName>
    <description>[CDD NA Pilot] Name of competitor the opportunity is lost to.</description>
    <label>Competitor Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3M</fullName>
            </value>
            <value>
                <fullName>Abbott</fullName>
            </value>
            <value>
                <fullName>Accelerate</fullName>
            </value>
            <value>
                <fullName>Accelerate Pheno</fullName>
            </value>
            <value>
                <fullName>Affinity Biosensors</fullName>
            </value>
            <value>
                <fullName>Agena</fullName>
            </value>
            <value>
                <fullName>Agilent</fullName>
            </value>
            <value>
                <fullName>ALERE</fullName>
            </value>
            <value>
                <fullName>Alfresa Pharma Corporation</fullName>
            </value>
            <value>
                <fullName>Ark</fullName>
            </value>
            <value>
                <fullName>Ark Diagnostics</fullName>
            </value>
            <value>
                <fullName>ARUP</fullName>
            </value>
            <value>
                <fullName>Astrego</fullName>
            </value>
            <value>
                <fullName>Autobio</fullName>
            </value>
            <value>
                <fullName>AVANTIK</fullName>
            </value>
            <value>
                <fullName>AXA/Corgenix</fullName>
            </value>
            <value>
                <fullName>AZER</fullName>
            </value>
            <value>
                <fullName>BD</fullName>
            </value>
            <value>
                <fullName>Beckman</fullName>
            </value>
            <value>
                <fullName>BECKMAN COULTER</fullName>
            </value>
            <value>
                <fullName>Becton Dickinson</fullName>
            </value>
            <value>
                <fullName>Binding Site</fullName>
            </value>
            <value>
                <fullName>BioFire</fullName>
            </value>
            <value>
                <fullName>BioKar</fullName>
            </value>
            <value>
                <fullName>Biomedia</fullName>
            </value>
            <value>
                <fullName>Biomerieux</fullName>
            </value>
            <value>
                <fullName>Biorad</fullName>
            </value>
            <value>
                <fullName>Bio-Rad</fullName>
            </value>
            <value>
                <fullName>Biosystems</fullName>
            </value>
            <value>
                <fullName>BioTecon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>