force-app/main/default/objects/Opportunity/fields/Competitors__c.field-meta.xml
<CustomField>
    <fullName>Competitors__c</fullName>
    <label>Competitors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>JP_IDD_Division__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3M</fullName>
            </value>
            <value>
                <fullName>ABBOTT</fullName>
                <label>Abbott</label>
            </value>
            <value>
                <fullName>Accelerate</fullName>
            </value>
            <value>
                <fullName>Accelerate Pheno</fullName>
            </value>
            <value>
                <fullName>Adaptive Biotechnology</fullName>
            </value>
            <value>
                <fullName>AESKU</fullName>
            </value>
            <value>
                <fullName>Affinity Biosensors</fullName>
            </value>
            <value>
                <fullName>Agena</fullName>
            </value>
            <value>
                <fullName>Agilent</fullName>
            </value>
            <value>
                <fullName>Agnitio BioIC</fullName>
            </value>
            <value>
                <fullName>ALERE</fullName>
            </value>
            <value>
                <fullName>Alfresa Pharma Corporation</fullName>
            </value>
            <value>
                <fullName>Alifax</fullName>
            </value>
            <value>
                <fullName>Ark Diagnostics</fullName>
            </value>
            <value>
                <fullName>ARUP</fullName>
            </value>
            <value>
                <fullName>Astrego</fullName>
            </value>
            <value>
                <fullName>Athena</fullName>
            </value>
            <value>
                <fullName>Autobio</fullName>
            </value>
            <value>
                <fullName>AVANTIK</fullName>
            </value>
            <value>
                <fullName>AXA/Corgenix</fullName>
            </value>
            <value>
                <fullName>AZER</fullName>
            </value>
            <value>
                <fullName>BAG Healthcare</fullName>
            </value>
            <value>
                <fullName>BD</fullName>
            </value>
            <value>
                <fullName>Beckman</fullName>
            </value>
            <value>
                <fullName>Beckman Coulter</fullName>
            </value>
            <value>
                <fullName>Becton Dickinson</fullName>
            </value>
            <value>
                <fullName>Beijing LandBridge</fullName>
            </value>
            <value>
                <fullName>BFR</fullName>
            </value>
            <value>
                <fullName>BGI</fullName>
            </value>
            <value>
                <fullName>Binding Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>