force-app/main/default/objects/Opportunity/fields/Competitors_Added__c.field-meta.xml
<CustomField>
    <fullName>Competitors_Added__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Updated by the Competitor flow and adds the number of competitors to the opportunity to enforce addidion</description>
    <label># Competitors Added</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>