force-app/main/default/objects/Opportunity/fields/Competitors_Other__c.field-meta.xml
<CustomField>
    <fullName>Competitors_Other__c</fullName>
    <label>Competitors (Other)</label>
    <type>TextArea</type>
</CustomField>