force-app/main/default/objects/Opportunity/fields/Consumables_Product__c.field-meta.xml
<CustomField>
    <fullName>Consumables_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consumables Product</label>
    <type>Checkbox</type>
</CustomField>