force-app/main/default/objects/Opportunity/fields/Contract_Duration__c.field-meta.xml
<CustomField>
    <fullName>Contract_Duration__c</fullName>
    <label>Contract Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>18 Months</fullName>
            </value>
            <value>
                <fullName>24 Months</fullName>
            </value>
            <value>
                <fullName>36 Months</fullName>
            </value>
            <value>
                <fullName>48 Months</fullName>
            </value>
            <value>
                <fullName>60 Months</fullName>
            </value>
            <value>
                <fullName>其他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>