force-app/main/default/objects/Opportunity/fields/Contract_Length_CAT__c.field-meta.xml
<CustomField>
    <fullName>Contract_Length_CAT__c</fullName>
    <defaultValue>IF(
  OR(
    ISPICKVAL($User.Div__c, &quot;TDX&quot;),
    ISPICKVAL($User.Div__c, &quot;CDD/IDD&quot;),
    ISPICKVAL($User.Div__c, &quot;CDD/IDD/MBD&quot;),
    ISPICKVAL($User.Div__c, &quot;CDD/IDD/MBD/TDX&quot;),
    ISPICKVAL($User.Div__c, &quot;CDD/IDD/TDX&quot;),
    ISPICKVAL($User.Div__c, &quot;IDD&quot;),
    ISPICKVAL($User.Div__c, &quot;IDD/MBD&quot;),
    ISPICKVAL($User.Div__c, &quot;IDD/MBD/TDX&quot;),
    ISPICKVAL($User.Div__c, &quot;IDD/TDX&quot;)
  ),
  12,
  NULL
)</defaultValue>
    <description>[CDD NA Pilot] Length of the contract by month.</description>
    <inlineHelpText># of months</inlineHelpText>
    <label>Contract Length (months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>