force-app/main/default/objects/Opportunity/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <description>This field is used to identify the type of contract for MBD Opportunities. #SDG Contract Compliance Project 2025.</description>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Opportunity_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reagent Rental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>