force-app/main/default/objects/Opportunity/fields/Contribution_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Contribution_This_Year__c</fullName>
    <description>Calculation of the amount of the opportunity realized in the current year based on the close date</description>
    <formula>IF( Contract_Length_CAT__c &lt; 12, Total_Value_of_the_Deal_CAT__c , Number_of_Days_to_Year_End__c * ( Annual_Average_Value__c / 365))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contribution This Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>