force-app/main/default/objects/Opportunity/fields/Converted_Currency_in_USD__c.field-meta.xml
<CustomField>
    <fullName>Converted_Currency_in_USD__c</fullName>
    <label>Converted Currency in USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>