force-app/main/default/objects/Opportunity/fields/Cooperation_Method__c.field-meta.xml
<CustomField>
    <fullName>Cooperation_Method__c</fullName>
    <label>Cooperation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Sale</fullName>
            </value>
            <value>
                <fullName>Giveaway</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>