force-app/main/default/objects/Opportunity/fields/Cooperation_Method_of_Current_Brand__c.field-meta.xml
<CustomField>
    <fullName>Cooperation_Method_of_Current_Brand__c</fullName>
    <label>Cooperation Method of Current Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>lease</fullName>
            </value>
            <value>
                <fullName>Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>