force-app/main/default/objects/Opportunity/fields/Copan_Approved_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Copan_Approved_Configuration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copan Approved Configuration</label>
    <type>Checkbox</type>
</CustomField>