force-app/main/default/objects/Opportunity/fields/Corporate_Account__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Account__c</fullName>
    <description>PDX Field</description>
    <formula>Account.Corporate_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corporate Account</label>
    <type>Checkbox</type>
</CustomField>