force-app/main/default/objects/Opportunity/fields/COVID_19_Antibody_Testing__c.field-meta.xml
<CustomField>
    <fullName>COVID_19_Antibody_Testing__c</fullName>
    <formula>INCLUDES( Product_Family_CAT__c , &quot;IDD - COVID-19 Antibody Testing&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COVID-19 Antibody Testing</label>
    <type>Checkbox</type>
</CustomField>