force-app/main/default/objects/Opportunity/fields/Created_date_for_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Created_date_for_Dashboard__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created date for Dashboard</label>
    <type>Date</type>
</CustomField>