force-app/main/default/objects/Opportunity/fields/Current_Brand__c.field-meta.xml
<CustomField>
    <fullName>Current_Brand__c</fullName>
    <label>Current Brand</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brand_Level_2</valueSetName>
    </valueSet>
</CustomField>