force-app/main/default/objects/Opportunity/fields/Current_Brand_BMK__c.field-meta.xml
<CustomField>
    <fullName>Current_Brand_BMK__c</fullName>
    <label>Current Brand BMK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>