force-app/main/default/objects/Opportunity/fields/Current_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Monthly_Revenue__c</fullName>
    <formula>IF(
   AND(
       MONTH(TODAY())&gt;=  MONTH(CloseDate),
       YEAR(TODAY()) &gt;=  YEAR(CloseDate),
       MONTH(TODAY()) &lt;=   MONTH(Contract_Length_CAT__c * MONTH(CloseDate) + Contract_Length_CAT__c + CloseDate),
       YEAR(TODAY()) &lt;=   YEAR(Contract_Length_CAT__c * MONTH(CloseDate) + Contract_Length_CAT__c + CloseDate)
 
       ),
       Estimated_Recurring_Monthly_Revenue__c, NULL
   )</formula>
    <label>Current Monthly Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>