force-app/main/default/objects/Opportunity/fields/Current_Price_Per_Sample__c.field-meta.xml
<CustomField>
    <fullName>Current_Price_Per_Sample__c</fullName>
    <label>Current Price Per Sample</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>