force-app/main/default/objects/Opportunity/fields/Current_Sales_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Sales_Status__c</fullName>
    <label>当前销售状态</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>