force-app/main/default/objects/Opportunity/fields/Current_Samples__c.field-meta.xml
<CustomField>
    <fullName>Current_Samples__c</fullName>
    <label>Current Samples</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>