force-app/main/default/objects/Opportunity/fields/Customer_Order__c.field-meta.xml
<CustomField>
    <fullName>Customer_Order__c</fullName>
    <label>Customer Order #</label>
    <length>200</length>
    <type>Text</type>
</CustomField>