force-app/main/default/objects/Opportunity/fields/Customer_Requested_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requested_Install_Date__c</fullName>
    <label>Customer Requested Install Date</label>
    <type>Date</type>
</CustomField>