force-app/main/default/objects/Opportunity/fields/Customer_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Customer_Timeline__c</fullName>
    <description>PDX Field</description>
    <label>Customer Timeline</label>
    <type>TextArea</type>
</CustomField>