force-app/main/default/objects/Opportunity/fields/Data_Science_Recommendation_Info__c.field-meta.xml
<CustomField>
    <fullName>Data_Science_Recommendation_Info__c</fullName>
    <formula>DS_Recommendation__r.Name + &apos;-&apos;+ DS_Recommendation__r.DS_PlayName__c + &apos;-&apos; + DS_Recommendation__r.DS_PlayDescription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Science Recommendation Info</label>
    <type>Text</type>
</CustomField>