force-app/main/default/objects/Opportunity/fields/Date_in_Evaluvation__c.field-meta.xml
<CustomField>
    <fullName>Date_in_Evaluvation__c</fullName>
    <label>Date in Evaluvation</label>
    <type>Date</type>
</CustomField>