force-app/main/default/objects/Opportunity/fields/Date_in_Needs_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Date_in_Needs_Analysis__c</fullName>
    <label>Date in Needs Analysis</label>
    <type>Date</type>
</CustomField>