force-app/main/default/objects/Opportunity/fields/Date_in_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Date_in_On_Hold__c</fullName>
    <label>Date in On Hold</label>
    <type>Date</type>
</CustomField>