force-app/main/default/objects/Opportunity/fields/Date_in_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Date_in_Proposal__c</fullName>
    <label>Date in Proposal</label>
    <type>Date</type>
</CustomField>