force-app/main/default/objects/Opportunity/fields/Date_in_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Date_in_Prospect__c</fullName>
    <label>Date in Prospect</label>
    <type>Date</type>
</CustomField>