force-app/main/default/objects/Opportunity/fields/Date_in_Verbal_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Date_in_Verbal_Agreement__c</fullName>
    <label>Date in Verbal Agreement</label>
    <type>Date</type>
</CustomField>