force-app/main/default/objects/Opportunity/fields/Dealer_OEM_Friendly__c.field-meta.xml
<CustomField>
    <fullName>Dealer_OEM_Friendly__c</fullName>
    <description>Shows Friendly Account Name of related Dealer Account</description>
    <formula>Wholesaler__r.Friendly_account_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer/OEM (Friendly Account Name)</label>
    <type>Text</type>
</CustomField>