force-app/main/default/objects/Opportunity/fields/Dealer_OEM_Province__c.field-meta.xml
<CustomField>
    <fullName>Dealer_OEM_Province__c</fullName>
    <label>Dealer/OEM Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>