force-app/main/default/objects/Opportunity/fields/Decentralization_from_Current_Customer__c.field-meta.xml
<CustomField>
    <fullName>Decentralization_from_Current_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PDX Field</description>
    <label>Decentralization from Current Customer?</label>
    <type>Checkbox</type>
</CustomField>