force-app/main/default/objects/Opportunity/fields/Delivery_Terms__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Terms__c</fullName>
    <label>Delivery Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CFR</fullName>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>DAT</fullName>
            </value>
            <value>
                <fullName>EXW</fullName>
            </value>
            <value>
                <fullName>FOB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>