force-app/main/default/objects/Opportunity/fields/Demo_Approver__c.field-meta.xml
<CustomField>
    <fullName>Demo_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PDX Field</description>
    <label>Demo Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>