force-app/main/default/objects/Opportunity/fields/Demo_Approver_is_Me__c.field-meta.xml
<CustomField>
    <fullName>Demo_Approver_is_Me__c</fullName>
    <formula>Demo_Approver__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demo Approver is Me</label>
    <type>Checkbox</type>
</CustomField>