force-app/main/default/objects/Opportunity/fields/Demo_Location__c.field-meta.xml
<CustomField>
    <fullName>Demo_Location__c</fullName>
    <label>Demo Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>