force-app/main/default/objects/Opportunity/fields/Demo_Requested__c.field-meta.xml
<CustomField>
    <fullName>Demo_Requested__c</fullName>
    <label>Demo Requested</label>
    <length>255</length>
    <type>Text</type>
</CustomField>