force-app/main/default/objects/Opportunity/fields/Deviation_Annual__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Annual__c</fullName>
    <label>Deviation: Annual</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>