force-app/main/default/objects/Opportunity/fields/Deviation_One_Off__c.field-meta.xml
<CustomField>
    <fullName>Deviation_One_Off__c</fullName>
    <label>Deviation: One-Off</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>