force-app/main/default/objects/Opportunity/fields/Dimension_1__c.field-meta.xml
<CustomField>
    <fullName>Dimension_1__c</fullName>
    <label>Dimension 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A&amp;A</fullName>
            </value>
            <value>
                <fullName>BMK</fullName>
            </value>
            <value>
                <fullName>NDx</fullName>
            </value>
            <value>
                <fullName>CDR</fullName>
            </value>
            <value>
                <fullName>CMS</fullName>
                <isActive>false</isActive>
                <label>CMS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>