force-app/main/default/objects/Opportunity/fields/Dimension_2__c.field-meta.xml
<CustomField>
    <fullName>Dimension_2__c</fullName>
    <label>Dimension 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Dimension_1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acute Care / Cardiac</fullName>
            </value>
            <value>
                <fullName>Bone Metabolism</fullName>
            </value>
            <value>
                <fullName>Cascadion</fullName>
            </value>
            <value>
                <fullName>Clinical Chemistry</fullName>
            </value>
            <value>
                <fullName>Endocrinology</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Fertility</fullName>
            </value>
            <value>
                <fullName>Indiko Instrument</fullName>
            </value>
            <value>
                <fullName>Infectiology</fullName>
            </value>
            <value>
                <fullName>Kryptor Instrument</fullName>
            </value>
            <value>
                <fullName>Konelab Instrument</fullName>
            </value>
            <value>
                <fullName>Niche</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Particles</fullName>
            </value>
            <value>
                <fullName>Preeclampsia</fullName>
            </value>
            <value>
                <fullName>Prenatal Screening</fullName>
            </value>
            <value>
                <fullName>QC</fullName>
            </value>
            <value>
                <fullName>TDM/ISD</fullName>
            </value>
            <value>
                <fullName>TOX</fullName>
            </value>
            <value>
                <fullName>Rapid Testing</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>HVFL</fullName>
            </value>
            <value>
                <fullName>SBFL</fullName>
            </value>
            <value>
                <fullName>Own Label &amp; Custom</fullName>
            </value>
            <value>
                <fullName>Lyophilization</fullName>
            </value>
            <value>
                <fullName>Formulation</fullName>
            </value>
            <value>
                <fullName>System Fluids</fullName>
            </value>
            <value>
                <fullName>Assays</fullName>
            </value>
            <value>
                <fullName>QC/Cals</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>